<resources>
    <string name="app_name">BarReview</string>
    <string name="all_appname">Debar</string>
    <string name="all_applogo">Logo</string>
    <string name="all_pass">Contraseña</string>
    <string name="all_user">Usuario</string>
    <string name="main_login">Ingresar</string>
    <string name="barlist_title">Lista de Bares</string>
    <string name="bar_title">Reseña</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="newbar_name">Nombre</string>
    <string name="newbar_address">Direccion</string>
    <string name="newbar_title">Ingresa los datos del nuevo bar</string>
    <string name="newbar_neighborhood">Barrio</string>
    <string name="newbar_add">Agregar</string>
</resources>