<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/barListFragment">

    <fragment
        android:id="@+id/barListFragment"
        android:name="com.example.barreview.ui.BarListFragment"
        android:label="@string/barlist_title"
        tools:layout="@layout/fragment_bar_list">
        <action
            android:id="@+id/action_barListFragment_to_barFragment"
            app:destination="@id/barFragment"
            app:popUpToInclusive="false" />
        <action
            android:id="@+id/action_barListFragment_to_newBarFragment"
            app:destination="@id/newBarFragment" />
    </fragment>
    <fragment
        android:id="@+id/barFragment"
        android:name="com.example.barreview.ui.BarFragment"
        android:label="@string/bar_title"
        tools:layout="@layout/fragment_bar">
        <argument
            android:name="id"
            app:argType="string" />
        <action
            android:id="@+id/action_barFragment_to_newBeerFragment"
            app:destination="@id/newBeerFragment" />
    </fragment>

    <fragment
        android:id="@+id/newBarFragment"
        android:name="com.example.barreview.ui.NewBarFragment"
        android:label="@string/newbar_title"
        tools:layout="@layout/fragment_new_bar">
        <action
            android:id="@+id/action_newBarFragment_to_barListFragment"
            app:destination="@id/barListFragment"
            app:popUpTo="@id/barListFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/newBeerFragment"
        android:name="com.example.barreview.ui.NewBeerFragment"
        android:label="Ingresa los datos">
        <argument
            android:name="id"
            app:argType="string" />
        <action
            android:id="@+id/action_newBeerFragment_to_barFragment"
            app:destination="@id/barFragment"
            app:popUpTo="@id/barFragment"
            app:popUpToInclusive="true" />
    </fragment>
</navigation>