<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.NewBarFragment"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/nameBarTFL"
            style="@style/Widget.BarReview.TextInputOutlined"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:hint="@string/newbar_name"
            app:errorEnabled="true"
            app:hintTextAppearance="@style/TextLabel"
            app:hintTextColor="@color/original_orange_dark">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/nameBarTF"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none|textPersonName"
                android:textSize="16sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/addressBarTFL"
            style="@style/Widget.BarReview.TextInputOutlined"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:hint="@string/newbar_address"
            app:errorEnabled="true"
            app:hintTextAppearance="@style/TextLabel"
            app:hintTextColor="@color/original_orange_dark">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/addressBarTF"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPostalAddress" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/neigborhoodTFL"
            style="@style/Widget.BarReview.TextInputOutlined"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:hint="@string/newbar_neighborhood"
            app:errorEnabled="true"
            app:hintTextAppearance="@style/TextLabel"
            app:hintTextColor="@color/original_orange_dark">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/neigborhoodTF"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/createBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/newbar_add" />


    </LinearLayout>

</ScrollView>
